<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_lg">

    <!-- Logo -->
    <ImageView
        android:id="@+id/ivDialogLogo"
        android:layout_width="@dimen/icon_size_dialog"
        android:layout_height="@dimen/icon_size_dialog"
        android:src="@drawable/logo_sekolah"
        android:contentDescription="@string/cd_app_logo"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- App Name -->
    <TextView
        android:id="@+id/tvDialogAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.PortalKurikulum.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDialogLogo" />

    <!-- School Name -->
    <TextView
        android:id="@+id/tvDialogSchoolName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/splash_subtitle"
        android:textAppearance="@style/TextAppearance.PortalKurikulum.Body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogAppName" />

    <!-- Divider -->
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginHorizontal="@dimen/spacing_xl"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogSchoolName" />

    <!-- Version -->
    <TextView
        android:id="@+id/tvDialogVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/app_version"
        android:textAppearance="@style/TextAppearance.PortalKurikulum.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:text="v1.0.0" />

    <!-- Description -->
    <TextView
        android:id="@+id/tvDialogDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginHorizontal="@dimen/spacing_sm"
        android:gravity="center"
        android:text="@string/info_dialog_description"
        android:textAppearance="@style/TextAppearance.PortalKurikulum.Body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogVersion" />

    <!-- Copyright -->
    <TextView
        android:id="@+id/tvDialogCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/app_copyright"
        android:textAppearance="@style/TextAppearance.PortalKurikulum.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogDescription"
        tools:text="© 2026 SMAN Pesanggaran"/>

</androidx.constraintlayout.widget.ConstraintLayout>
